# DS_Actual_CP

./: CMakeLists.txt  README.md  analyzer_out.txt  build_out.txt  build_out_cmd.txt  cmake_build.txt  cmake_gen.txt  cmake_out.txt  cmake_output.txt  err.txt  implementation_plan.md  package-lock.json  scratch.json  scratch_test.json
backend/: server.js
dashboard/: applications.html  index.html  manual.html  metrics.json  performance.html  setup.md
dashboard/css/: navbar.css  style.css  styles.css
dashboard/js/: app.js  apps_logic.js  d3_visualizer.js  main.js  manual_logic.js
data/: realworld.txt
include/: AVLTree.h  BPlusTree.h  BTree.h  BenchmarkRunner.h  DatasetGenerator.h  InteractiveRunner.h  MetricCollector.h  Metrics.h  RedBlackTree.h  SearchTree.h  SplayTree.h
src/: AVLTree.cpp  BPlusTree.cpp  BTree.cpp  BenchmarkRunner.cpp  DatasetGenerator.cpp  InteractiveRunner.cpp  MetricCollector.cpp  RedBlackTree.cpp  Simulations.cpp  Simulations.h  SplayTree.cpp  main.cpp  tree_cli.cpp
tests/: TreeTests.cpp
